api and web - capacity initial draft
