# apps/vite-react-ts-template/src/modules/reservations/infrastructure/reservationQuery.ts
@@ -24,6 +24,7 @@ const getReservationQuery = (params: ReservationsListInput) => ({
       )
       .then((res) => ({
         reservations: res.data.reservations,
+        capacity: res.data.capacity,
       })),
 });
 
